fixed z-index post detail

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,7 +277,7 @@ footer.main-footer {
   padding: 0 1rem;
   /* background-color: var(--mdc-theme-primary, #398791); */
   margin-top: -1.5rem;
-  z-index: 50;
+  z-index: 3;
   position: relative;
 }
 
@@ -315,7 +315,7 @@ footer.main-footer {
   position: absolute;
   background-color: black;
   opacity: 0.2;
-  z-index: 49;
+  z-index: 2;
   width: 100%;
   height: 100%;
   top: 0;
